Make kinda good animations for teamspeak clients' events (online/offline/change). Include http://www.justinaguilar.com/animations/

--- a/source/templates/client.hbs
+++ b/source/templates/client.hbs
@@ -1,4 +1,4 @@
-<div class="ts-client{{#unless userslug}} ts-client-gray{{/unless}} animated" id="ts-client-{{ clid }}"{{#if userslug}} data-userlink="user/{{ userslug }}"{{/if}}>
+<div class="ts-client{{#unless userslug}} ts-client-gray{{/unless}}" id="ts-client-{{ clid }}"{{#if userslug}} data-userlink="user/{{ userslug }}"{{/if}}>
 	{{#each prefix}}
 		<div class="ts-prefix {{ this }}">1&nbsp;</div>
 	{{/each}}
