Significally improved ts-clients animations

--- a/public/less/mixins.less
+++ b/public/less/mixins.less
@@ -20,6 +20,7 @@
 
 .ts-prefix, .ts-client-flag, .ts-client-header, .ts-channel-header, .ts-client-info {
 	display: inline-block;
+	vertical-align: top;
 }
 
 .ts-client {
