--- a/public/less/ts-clients.less
+++ b/public/less/ts-clients.less
@@ -14,11 +14,14 @@
 
 .ts-client-header {
 	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .ts-client {
-	border-radius: 5px;
+	height: 24px;
 	padding: 2px 0;
+	border-radius: 5px;
 
 	&:hover {
 		background-color: #CfE3FF;
