--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -18,7 +18,7 @@
 	padding-right: 0;
 }
 
-.ts-prefix, .ts-client-flag, .ts-client-header, .ts-channel-header, .ts-client-info {
+.ts-prefix, .ts-client-flag, .ts-client-header, .ts-channel-header, .ts-client-info, .ts-channel-info {
 	display: inline-block;
 	vertical-align: top;
 }
