--- a/source/less/ts-clients.less
+++ b/source/less/ts-clients.less
@@ -21,8 +21,8 @@
 
 .ts-client {
 	position: relative;
-	height: 24px;
-	padding: 2px 0;
+	height: 20px;
+	padding: 0;
 	border-radius: 5px;
 
 	&:hover {
