--- a/source/less/main.less
+++ b/source/less/main.less
@@ -13,6 +13,16 @@ a {
 }
 
 #mega-teamspeak {
-	margin: 0 5px 20px 8px;
+	margin: 0 10px 20px 8px;
 	min-width: 200px;
+}
+
+#mega-teamspeak-logo {
+	margin: 0 auto;
+	display: block;
+}
+
+#mega-teamspeak-loading-spinner {
+	display: block;
+	margin: 0 auto;
 }
