Make manual bounder & unbounder, add templates & js for them, add preloading image, move socketListener in bounder in separate function, etc

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -8,9 +8,9 @@ a {
 	}
 }
 
-#main>.table>tbody>tr>td {
-	border-top: none;
-}
+// #main>.table>tbody>tr>td {
+// 	border-top: none;
+// }
 
 #mega-teamspeak {
 	margin: 0 10px 20px 8px;
@@ -25,4 +25,29 @@ a {
 #mega-teamspeak-loading-spinner {
 	display: block;
 	margin: 0 auto;
+}
+
+.mega-teamspeak-bounder__accounts {
+	margin-bottom: 0px;
+	background-color: transparent;
+
+	& .panel-heading{
+		background-color: transparent;
+	}
+}
+
+.mega-teamspeak-bounder__button {
+	display: block;
+	margin: 0 auto;
+}
+
+#mega-teamspeak-bounder-cldbids {
+	& > table {
+		margin-bottom: 0;
+	}
+}
+
+#mega-teamspeak-bounder-cldbids .table>tbody>tr>td {
+	border-top: none;
+	padding: 8px 25px;
 }
