--- a/source/templates/cldbids.hbs
+++ b/source/templates/cldbids.hbs
@@ -1,5 +1,5 @@
 <table class="table table-hover">
 	{{#each idList}}
-		<tr><td>Teamspeak (Knights.pro)</td><td>{{ nickname }}({{ cldbid }})</td></tr>
+		<tr><td>{{ nickname }} (id: {{ cldbid }})</td></tr>
 	{{/each}}
 </table>
